feat: update configuration and improve type definitions

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -4,7 +4,14 @@
   "linter": {
     "rules": {
       "style": {
-        "noMagicNumbers": "off"
+        "noMagicNumbers": "off",
+        "useFilenamingConvention": "off"
+      },
+      "a11y": {
+        "noSvgWithoutTitle": "off"
+      },
+      "suspicious": {
+        "noUnknownAtRules": "off"
       }
     }
   }
