--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^4.5.1",
+    "@t3-oss/env-core": "^0.13.8",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "caniuse-lite": "^1.0.30001751",
     "classnames": "^2.5.1",
+    "jiti": "1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.2.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
@@ -26,13 +31,13 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "autoprefixer": "^10.0.1",
     "lefthook": "^2.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5",
     "ultracite": "6.0.5"
   },
