--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^4.5.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-core": "^0.13.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "caniuse-lite": "^1.0.30001751",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "jiti": "1",
+    "lucide-react": "^0.548.0",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -38,6 +45,7 @@
     "lefthook": "^2.0.2",
     "postcss": "^8",
     "tailwindcss": "^4.1.16",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "ultracite": "6.0.5"
   },
