--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 DEEPGRAM_API_KEY=
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+ALLOWED_ORIGIN=*
+ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS,PATCH
+ALLOWED_HEADERS=Content-Type,Authorization,X-Requested-With,Accept,Origin
+EXPOSED_HEADERS=Content-Length,Content-Type
